# spawn-wasm-erc20

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
