[package]
name = "spawn-wasm-erc20"
version = "0.1.0"
authors = ["nzengi < zenginureddin1@gmail.com>"]
edition = "2021"
description = "A WASM-based ERC-20 token library for Web3 developers, providing a high-performance, secure, and customizable solution."
license = "MIT"
repository = "https://github.com/nzengi/spawn-wasm-erc20"
homepage = "https://github.com/nzengi/spawn-wasm-erc20"
readme = "README.md"
keywords = ["WASM", "ERC20", "blockchain", "WebAssembly", "Rust"]
categories = ["cryptography", "web-programming"]


[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
