[package]
name = "spawn-wasm-erc20"
version = "0.1.1"
authors = ["nzengi < zenginureddin1@gmail.com>"]
edition = "2021"
description = "A WASM-based ERC-20 token library for Web3 developers, providing a high-performance, secure, and customizable solution."
license = "MIT"
repository = "https://github.com/nzengi/spawn-wasm-erc20"
homepage = "https://github.com/nzengi/spawn-wasm-erc20"
readme = "README.md"
keywords = ["WASM", "ERC20", "blockchain", "WebAssembly", "Rust"]
categories = ["cryptography", "web-programming"]

[dependencies]
# WASM bindgen to communicate between Rust and JavaScript
wasm-bindgen = "0.2"

# Serde for serialization/deserialization, used if required in further development
serde = { version = "1.0", features = ["derive"] }

# Optionally, you may add this for panic hook (to improve debugging experience)
console_error_panic_hook = { version = "0.1.6", optional = true }

web-sys = { version = "0.3", features = ["console"] }

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

